--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
     <nav></nav>
-        <img src="relivent-obj/logo.png" alt="" class="logo">
+        <img src="img/logo.png" alt="" class="logo">
+        <h1>Welcome to my iChat Application</h1>
     </nav>
     <div class="container">
-        <div class="message right">SundeepL how are you</div>
-        <div class="message left">Harry: i am fine Whats about you</div>
+        <!-- <div class="message right">SundeepL how are you</div>
+        <div class="message left">Harry: i am fine Whats about you</div> -->
     </div>
     <div class="send">
         <form action="#" id="send-container">
